--- a/complete/src/main/resources/static/index.html
+++ b/complete/src/main/resources/static/index.html
@@ -14,21 +14,29 @@
     Javascript and reload this page!</h2></noscript>
 <div id="main-content" class="container">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-4">
             <form class="form-inline">
                 <div class="form-group">
-                    <label for="connect">WebSocket connection:</label>
+                    <label for="connect">WebSocket:</label>
                     <button id="connect" class="btn btn-default" type="submit">Connect</button>
                     <button id="disconnect" class="btn btn-default" type="submit" disabled="disabled">Disconnect
                     </button>
                 </div>
             </form>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
             <form class="form-inline">
                 <div class="form-group">
-                    <label for="name">What is your name?</label>
-                    <input type="text" id="name" class="form-control" placeholder="Your name here...">
+                    <label for="toUser">To user</label>
+                    <input type="text" id="toUser" class="form-control" placeholder="To user">
+                </div>
+            </form>
+        </div>
+        <div class="col-md-4">
+            <form class="form-inline">
+                <div class="form-group">
+                    <label for="message">Message</label>
+                    <input type="text" id="message" class="form-control" placeholder="Type message here...">
                 </div>
                 <button id="send" class="btn btn-default" type="submit">Send</button>
             </form>
